Harden onboarding subscriptions and billing release